[gd_scene load_steps=6 format=2]

[ext_resource path="res://Setup/Fondo.tscn" type="PackedScene" id=1]
[ext_resource path="res://Iniciar_sesion.gd" type="Script" id=3]
[ext_resource path="res://Fuentes/coolvetica rg.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://Mega sign-up/log twitch.tscn" type="PackedScene" id=5]

[sub_resource type="DynamicFont" id=1]
size = 48
font_data = ExtResource( 4 )

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Fondo" parent="." instance=ExtResource( 1 )]
position = Vector2( 2.91259, 2.91253 )

[node name="canal" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -118.905
margin_top = -220.0
margin_right = 118.905
margin_bottom = -130.0
grow_horizontal = 2
grow_vertical = 2
text = "Inicia sesion del canal:"
align = 1
valign = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Iniciar sesión twitch2" parent="canal" instance=ExtResource( 5 )]
anchor_left = 0.5
anchor_top = 1.4
anchor_right = 0.5
anchor_bottom = 1.4

[node name="bot" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -120.5
margin_top = -26.0
margin_right = 120.5
margin_bottom = 26.0
grow_horizontal = 2
grow_vertical = 2
text = "Inicia sesion del bot:"
align = 1
valign = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Iniciar sesión twitch" parent="bot" instance=ExtResource( 5 )]
anchor_left = 0.5
anchor_top = 1.8
anchor_right = 0.5
anchor_bottom = 1.8
scopes = "chat:edit-chat:read-user:edit-user:edit:follows-channel:moderate-moderation:read-whispers:read-whispers:edit"

[node name="Boton" parent="bot/Iniciar sesión twitch" index="0"]
disabled = true

[node name="Titulo" type="Label" parent="."]
anchor_right = 1.0
margin_bottom = 145.0
custom_fonts/font = SubResource( 1 )
text = "!Bienvenido!"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="saltar" type="Button" parent="."]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 30.0
margin_top = -50.0
margin_right = 174.0
margin_bottom = -30.0
text = "Saltar Incio de sesión"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="finalizado" from="canal/Iniciar sesión twitch2" to="." method="channel_finished"]
[connection signal="finalizado" from="bot/Iniciar sesión twitch" to="." method="bot_finished"]
[connection signal="pressed" from="saltar" to="." method="_on_saltar_pressed"]

[editable path="canal/Iniciar sesión twitch2"]
[editable path="bot/Iniciar sesión twitch"]
